[project]
name = "llm-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.8",
    "langchain-core",
    "langchain-google-community>=2.0.2",
    "langchain-openai",
    "langchain-prompty>=0.1.1",
    "langgraph>=0.2.53",
    "ragas>=0.2.6",
    "ruff",
]
